--- a/oroasis/tsconfig.json
+++ b/oroasis/tsconfig.json
@@ -111,7 +111,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/*.ts"
+    "src"
   ],
   "exclude": [
     "node_modules",
