--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     },
     "commands": [
       {
-        "command": "agentownorasis.helloWorld",
+        "command": "oroasis.helloWorld",
         "title": "Hello World"
       },
       {
