--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         },
         "oroasisSettings.ollamaListModels":{
           "type":"array",
-          "default":["llama3.2"],
           "description": "List of models from Ollama"
         },
         "oroasisSettings.templatePromptGenerate":{
@@ -35,6 +34,20 @@
         }
       }
     },
+    "menus": {
+		 	"comments/comment/title": [
+		 		{
+		 			"command": "oroasis.deleteComment",
+          "group": "commentDelete",
+		 			"when": "commentController == oroasisCommentController && canBeDeleteComment"
+		 		},
+        {
+          "command": "oroasis.editComment",
+          "group": "commentEditable",
+          "when": "comment == oroasisCommentController"
+        }
+		 	]
+		 },
     "commands": [
       {
         "command": "oroasis.helloWorld",
@@ -49,8 +62,20 @@
         "title": "Oroasis: Create Comment"
       },
       {
+        "command": "oroasis.editComment",
+        "title": "Oroasis: Edit Comment"
+      },
+      {
+        "command": "oroasis.deleteComment",
+        "title": "Oroasis: Delete Comment"
+      },
+      {
         "command": "oroasis.askAgent",
         "title": "Oroasis: Ask to Agent"
+      },
+      {
+        "command": "oroasis.editAgent",
+        "title": "Oroasis: Edit agent"
       }
     ]
   },
@@ -59,7 +84,7 @@
     "start:webview": "cd webview-chat && npm run start",
     "build:webview": "cd webview-chat && npm run build",
     "compile": "tsc -b ./",
-    "watch": "tsc -b -watch ./",
+    "watch": "tsc -watch -p ./",
     "lint": "eslint src",
     "pretest": "npm run compile && npm run lint",
     "test": "vscode-test",
