--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "contributes": {
     "commands": [
       {
-        "command": "Oroasis.updateModels",
+        "command": "oroasis.updateModels",
         "title": "Oroasis: Update Models"
       },
       {
