--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
         },
          "oroasisSettings.templatePromptAutoComplete": {
           "type": "string",
-          "default": "You are my personal AI that helps me autocomplete programming code, you must determine the language and give me autocomplete of properties, functions, classes, namespaces, conditionals, logical operators, and be very literal, always end your suggestions on a complete sentence:",
+          "default": "You are autocomplete programming code, always end your suggestions on a complete sentence:",
           "editPresentation": "multilineText",
           "description": "Template prompt use to generate"
         }
