--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,8 +8,9 @@
 			"script": "watch",
 			"problemMatcher": "$tsc-watch",
 			"isBackground": true,
-			"dependsOn":[
-				"compile"
+			"dependsOn": [
+				"compile",
+				"start:webview"
 			],
 			"presentation": {
 				"reveal": "never"
@@ -17,6 +18,50 @@
 			"group": {
 				"kind": "build",
 				"isDefault": true
+			}
+		},
+		{
+			"type": "npm",
+			"script": "start:webview",
+			"group": "build",
+			"dependsOn": [
+				"npm: build:webview"
+			],
+			"problemMatcher": [
+				{
+					"pattern": [
+						{
+							"regexp": ".",
+							"file": 1,
+							"location": 2,
+							"message": 3
+						}
+					],
+					"background": {
+						"activeOnStart": true,
+						"beginsPattern": ".",
+						"endsPattern": "."
+					}
+				}
+			],
+			"isBackground": true,
+			"label": "start:webview",
+			"presentation": {
+				"group": "watch",
+				"reveal": "always"
+			}
+		},
+		{
+			"type": "npm",
+			"script": "build:webview",
+			"group": "build",
+			"problemMatcher": [],
+			"isBackground": true,
+			"label": "npm: build:webview",
+			"dependsOn": [],
+			"presentation": {
+				"group": "watch",
+				"reveal": "always"
 			}
 		},
 		{
