--- a/webview-chat/angular.json
+++ b/webview-chat/angular.json
@@ -33,7 +33,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/highlight.js/styles/github.css"
             ],
             "scripts": []
           },
