--- a/webview-chat/angular.json
+++ b/webview-chat/angular.json
@@ -33,8 +33,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss",
-              "node_modules/highlight.js/styles/github.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
