--- a/webview-chat/angular.json
+++ b/webview-chat/angular.json
@@ -33,6 +33,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/highlight.js/scss/github-dark.scss",
               "src/styles.scss"
             ],
             "scripts": []
