--- a/webview-chat/package.json
+++ b/webview-chat/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^20.1.4",
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/material-icons": "^32.1.0",
+    "@ngrx/signals": "^20.0.0",
     "highlight.js": "^11.11.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
