--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
           "title": "Orasis IA",
           "icon": "resources/oroasisBotDark.png"
         }
+      ],
+      "secondarySidebar": [
+        {
+          "id": "oroasis-aii",
+          "title": "Orasis IA",
+          "icon": "resources/oroasisBotDark.png"
+        }
       ]
     },
     "views": {
