create persistant chats messages and list chats

--- a/package.json
+++ b/package.json
@@ -96,6 +96,10 @@
         "command": "oroasis.editAgent",
         "title": "Oroasis: Edit agent",
         "enablement": "!commentIsEmpty"
+      },
+      {
+        "command": "oroasis.cleanChats",
+        "title": "Cleaning chats"
       }
     ],
     "configuration": {
