modify prompts and refactor sendchat handlers use

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,9 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--enable-proposed-api",
+				"orojasga.agentownorasis"
 			],
 			"outFiles": [
 				"${workspaceFolder}/oroasis/out/**/*.js"
